switch service and rehearsal button

--- a/client/src/components/screens/PlannerPage/CreateEvent.scss
+++ b/client/src/components/screens/PlannerPage/CreateEvent.scss
@@ -20,9 +20,15 @@
         border-radius: 10px;
         margin-bottom: 10px;
 
-        .worship-leader {
-            .MuiSelect-outlined.MuiSelect-outlined {
-                min-width: 118px !important;
+        .card-header {
+            .worship-leader, .service-type {
+                .MuiSelect-outlined.MuiSelect-outlined {
+                    min-width: 100px;
+                }
+            }
+
+            .rehearsals {
+                padding-bottom: 0;
             }
         }
     }
