Fixed createEvent popup position on table view + other minor fixes

--- a/client/src/components/screens/PlannerPage/TableView.scss
+++ b/client/src/components/screens/PlannerPage/TableView.scss
@@ -30,6 +30,10 @@
                 //     min-width: 200px;
                 // }
 
+                &.date-time-col {
+                    min-width: 160px;
+                }
+
                 &.larger-col {
                     min-width: 220px;
                 }
