--- a/client/src/components/screens/TeamPage/TeamPage.scss
+++ b/client/src/components/screens/TeamPage/TeamPage.scss
@@ -1,5 +1,5 @@
 @import "./../../../globals.scss";
-.view-wrapper {
+.team-page-wrapper {
     margin: 0 5%;
     display: flex;
     flex-direction: column;
