--- a/client/src/components/screens/NewUser/NewUser.scss
+++ b/client/src/components/screens/NewUser/NewUser.scss
@@ -1,42 +1,44 @@
 @import "./../../../globals.scss";
 
 .new-user-wrapper {
-    background: linear-gradient($primary-color 0%, #e6b9a2 100%);
+    background: linear-gradient(#D83B1E 0%, #FE9969 100%);
+    display: flex;
+    flex-direction: column;
+    /*
     align-items: center;
-    height: 500px;
-    width: 200px;
+    height: 100%;
+    width: 100%;
     min-width: 80%;
     min-height: max-content;
+    */
+
+    min-height: 100%;
+    min-width: 1024px;
+	
+    /* Set up proportionate scaling */
+    width: 100%;
+    height: auto;
+        
+    /* Set up positioning */
+    position: fixed;
+    top: 0;
+    left: 0;
 
     .title {
-        flex-grow: 1;
+
         font-weight: bold;
         color: white;
-        padding-top: 50px;
-        border-radius: 10px;
+        padding-top: 1.3em;
+        flex-grow: 1;
     }
-
     .description {
         flex-grow: 1;
+        white-space: pre-line;
+        //justify-content: center;
+        //align-items: center;
         color: white;
-        padding-top: 50px;
-        border-radius: 10px;
-    }
+        margin: 0 3em;
 
-    .logo-background {
-        background-color: white;
-        max-width: 20%;
-        align-items: center;
     }
-
-    .login-button {
-        box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.3);
-        background-color: white;
-        max-width: "100%";
-        font-weight: bold;
-        color: $primary-color;
-        padding: 12px;
-        border-radius: 15px;
-        margin-bottom: 25px;
-    }
+  
 }
