--- a/client/src/components/screens/PlannerPage/PlannerPage.scss
+++ b/client/src/components/screens/PlannerPage/PlannerPage.scss
@@ -18,7 +18,7 @@
             flex-direction: column;
             justify-content: space-around;
             width: 3%;
-            margin: 0 1%;
+            margin: 0 1% 0 2%;
             //height: 90vh;
             .previous-button {
                 height: 90px;
@@ -39,7 +39,7 @@
             flex-direction: column;
             justify-content: space-around;
             width: 3%;
-            margin-right: 1%;
+            margin-right: 2%;
             //height: 90vh;
             .next-button {
                 height: 90px;
@@ -48,6 +48,11 @@
 
         .pagination-button-icon {
             transform: scale(3);
+        }
+
+        .emptyCardPlaceholder {
+            width: 28.65%;
+            margin-right: 1%;
         }
     }
 }
